--- a/Routing/Login/LoginViewController.storyboard
+++ b/Routing/Login/LoginViewController.storyboard
@@ -30,7 +30,7 @@
                                     <constraint firstAttribute="height" constant="50" id="R89-eR-EkB"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="auz-uU-aSj">
                                 <rect key="frame" x="163" y="299" width="66" height="35"/>
